# voice-pipeline

./: .gitignore  CLAUDE.md  NewVoicePipeline.md  README.md  flake.nix  pyproject.toml
nix/: module.nix  package.nix
src/: audio_env.py  cli.py  config.py  factory.py  health.py  log_format.py
src/adapters/: anthropic_llm.py  cli_completion.py  deepgram_stt.py  edge_tts_synthesizer.py  openai_tts.py  openai_whisper_stt.py  openclaw_llm.py  sounddevice_audio.py  unix_control.py
src/domain/: conversation.py  pipeline.py  speech_detector.py  state.py  wake_word.py
src/ports/: audio.py  vad.py
src/voice_pipeline/: __main__.py  config.py  factory.py
src/voice_pipeline/adapters/: deepgram_stt.py  openai_whisper_stt.py  openclaw_llm.py  silero_vad.py  sounddevice_audio.py  unix_control.py
src/voice_pipeline/domain/: events.py  pipeline.py  speech_detector.py  wake_word.py
src/voice_pipeline/ports/: completion.py  control.py  synthesizer.py  transcriber.py
tests/: conftest.py  record_test_audio.py  test_audio_env.py  test_audio_generators.py  test_chained_conversation.py  test_cli_completion.py  test_e2e_with_recordings.py  test_environment.py  test_pipeline_integration.py  test_recorded_audio.py  test_silero_vad_integration.py  test_stt_transcription.py  test_utterance_flush.py
tests/adapters/: test_fake_adapters.py  test_unix_control.py
tests/domain/: test_agent_language_and_token.py  test_conversation.py  test_pipeline.py  test_speech_detector.py  test_state.py  test_wake_word.py
